@@ -1,86 +1,97 @@
 package backend.techeerzip.global.logger;
 
-import java.util.Arrays;
+import java.io.IOException;
+import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import jakarta.servlet.http.HttpServletRequest;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 @Component
 public class CustomLogger {
+
+    // ANSI 색상 상수
     private static final String ANSI_RESET = "\u001B[0m";
     private static final String ANSI_RED = "\u001B[31m";
-    private static final String ANSI_GREEN = "\u001B[32m";
     private static final String ANSI_YELLOW = "\u001B[33m";
     private static final String ANSI_BLUE = "\u001B[34m";
     private static final String ANSI_CYAN = "\u001B[36m";
     private static final String ANSI_PURPLE = "\u001B[35m";
 
+    // MDC 키 상수
+    private static final String MDC_CONTEXT = "context";
+    private static final String MDC_TRACE = "trace";
+
+    // 민감 필드
     private static final List<String> SENSITIVE_FIELDS =
-            Arrays.asList("password", "token", "secret", "authorization");
-    private final Logger logger;
-    private final String logLevel;
+            List.of("password", "token", "secret", "authorization");
 
-    public CustomLogger(@Value("${LOGGER_LEVEL:production}") String logLevel) {
-        this.logger = LoggerFactory.getLogger(CustomLogger.class);
-        this.logLevel = logLevel;
-    }
+    // SLF4J Logger
+    private final Logger logger = LoggerFactory.getLogger(CustomLogger.class);
 
-    public void info(String message) {
-        if (shouldLog("info")) {
-            logger.info(getColoredMessage("INFO", ANSI_CYAN, message));
+    // -------------------------------------------------------------------------------
+    // 기본 메시지 로깅 (색상 + SLF4J 플레이스홀더 지원)
+    // -------------------------------------------------------------------------------
+
+    public void info(String format, Object... args) {
+        if (logger.isInfoEnabled()) {
+            logger.info(getColoredMessage("INFO", ANSI_CYAN, format), args);
         }
     }
 
-    public void error(String message) {
-        if (shouldLog("error")) {
-            logger.error(getColoredMessage("ERROR", ANSI_RED, message));
+    public void warn(String format, Object... args) {
+        if (logger.isWarnEnabled()) {
+            logger.warn(getColoredMessage("WARN", ANSI_YELLOW, format), args);
         }
     }
 
-    public void warn(String message) {
-        if (shouldLog("warn")) {
-            logger.warn(getColoredMessage("WARN", ANSI_YELLOW, message));
+    public void error(String format, Object... args) {
+        if (logger.isErrorEnabled()) {
+            logger.error(getColoredMessage("ERROR", ANSI_RED, format), args);
         }
     }
 
-    public void debug(String message) {
-        if (shouldLog("debug")) {
-            logger.debug(getColoredMessage("DEBUG", ANSI_BLUE, message));
+    public void debug(String format, Object... args) {
+        if (logger.isDebugEnabled()) {
+            logger.debug(getColoredMessage("DEBUG", ANSI_BLUE, format), args);
         }
     }
 
-    public void fatal(String message) {
-        if (shouldLog("fatal")) {
-            logger.error(getColoredMessage("FATAL", ANSI_PURPLE, message));
+    public void fatal(String format, Object... args) {
+        if (logger.isErrorEnabled()) {
+            logger.error(getColoredMessage("FATAL", ANSI_PURPLE, format), args);
         }
     }
 
+    /** HTTP 요청 바디를 포함한 에러 로깅. 민감 데이터는 REDACTED 처리됩니다. */
     public void bodyError(
             Exception e,
             String errorCode,
             String errorMessage,
             int statusCode,
             HttpServletRequest request) {
-        if (shouldLog("error")) {
+
+        if (logger.isErrorEnabled()) {
             String logMessage =
                     String.format(
-                            "\n%s[ERROR] %s%s\n"
-                                    + "%s* ERROR CODE:    %s%s\n"
-                                    + "%s* ERROR MESSAGE: %s%s\n"
-                                    + "%s* STATUS CODE:   %d%s\n"
-                                    + "%s* PATH:          %s%s\n"
-                                    + "%s* METHOD:        %s%s\n"
-                                    + "%s* BODY:          %s%s\n"
-                                    + "%s* STACK TRACE:   %s%s\n"
-                                    + "%s━━━━━━━━━━━━━━━━",
+                            """
+                    %s[ERROR] %s%s
+                    %s* ERROR CODE:    %s%s
+                    %s* ERROR MESSAGE: %s%s
+                    %s* STATUS CODE:   %d%s
+                    %s* PATH:          %s%s
+                    %s* METHOD:        %s%s
+                    %s* BODY:          %s%s
+                    %s* STACK TRACE:   %s%s
+                    %s━━━━━━━━━━━━━━━━
+                    """,
                             ANSI_RED,
-                            new java.util.Date().toString(),
+                            new Date(),
                             ANSI_RESET,
                             ANSI_RED,
                             errorCode,
@@ -108,84 +119,86 @@ public class CustomLogger {
         }
     }
 
-    private boolean shouldLog(String level) {
-        if ("production".equals(logLevel)) {
-            return Arrays.asList("error", "warn", "info").contains(level);
+    // -------------------------------------------------------------------------------
+    // MDC 활용 로그 (context, trace)
+    // -------------------------------------------------------------------------------
+
+    public void log(String message, String context) {
+        if (logger.isInfoEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.info(message);
+            MDC.remove(MDC_CONTEXT);
         }
-        return true; // development 환경에서는 모든 레벨의 로그 출력
     }
 
-    private String getColoredMessage(String level, String color, String message) {
-        return String.format("%s[%s]%s %s", color, level, ANSI_RESET, message);
+    public void error(String message, String trace, String context) {
+        if (logger.isErrorEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            MDC.put(MDC_TRACE, trace);
+            logger.error(message);
+            MDC.remove(MDC_CONTEXT);
+            MDC.remove(MDC_TRACE);
+        }
     }
 
+    public void warn(String message, String context) {
+        if (logger.isWarnEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.warn(message);
+            MDC.remove(MDC_CONTEXT);
+        }
+    }
+
+    public void debug(String message, String context) {
+        if (logger.isDebugEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.debug(message);
+            MDC.remove(MDC_CONTEXT);
+        }
+    }
+
+    public void verbose(String message, String context) {
+        if (logger.isTraceEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.trace(message);
+            MDC.remove(MDC_CONTEXT);
+        }
+    }
+
+    public void fatal(String message, String context) {
+        if (logger.isErrorEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.error(message);
+            MDC.remove(MDC_CONTEXT);
+        }
+    }
+
+    // -------------------------------------------------------------------------------
+    // 내부 헬퍼 메서드
+    // -------------------------------------------------------------------------------
+
+    /** 로그 메시지에 ANSI 컬러를 붙여서 반환 */
+    private String getColoredMessage(String level, String color, String format) {
+        return String.format("%s[%s]%s %s", color, level, ANSI_RESET, format);
+    }
+
+    /** HTTP 요청 바디를 읽어서 민감 필드를 마스킹 */
     private String sanitizeRequestBody(HttpServletRequest request) {
         try {
-            String body =
-                    request.getReader().lines().collect(java.util.stream.Collectors.joining());
-            if (body.isEmpty()) {
-                return "{}";
-            }
-            return sanitizeSensitiveData(body);
-        } catch (Exception e) {
+            String body = request.getReader().lines().collect(Collectors.joining());
+            return body.isEmpty() ? "{}" : sanitizeSensitiveData(body);
+        } catch (IOException e) {
             return "{}";
         }
     }
 
+    /** 민감 필드를 REDACTED 처리 */
     private String sanitizeSensitiveData(String body) {
-        List<String> sensitiveFields =
-                Arrays.asList("password", "token", "secret", "authorization");
-        for (String field : sensitiveFields) {
+        for (String field : SENSITIVE_FIELDS) {
             body =
                     body.replaceAll(
                             "(?i)\"" + field + "\":\"[^\"]*\"", "\"" + field + "\":\"[REDACTED]\"");
         }
         return body;
-    }
-
-    public void log(String message, String context) {
-        MDC.put("context", context);
-        logger.info(message);
-        MDC.remove("context");
-    }
-
-    public void error(String message, String trace, String context) {
-        MDC.put("context", context);
-        MDC.put("trace", trace);
-        logger.error(message);
-        MDC.remove("context");
-        MDC.remove("trace");
-    }
-
-    public void warn(String message, String context) {
-        MDC.put("context", context);
-        logger.warn(message);
-        MDC.remove("context");
-    }
-
-    public void debug(String message, String context) {
-        MDC.put("context", context);
-        logger.debug(message);
-        MDC.remove("context");
-    }
-
-    public void verbose(String message, String context) {
-        MDC.put("context", context);
-        logger.trace(message);
-        MDC.remove("context");
-    }
-
-    public void fatal(String message, String context) {
-        MDC.put("context", context);
-        logger.error(message);
-        MDC.remove("context");
-    }
-
-    private boolean isSensitiveField(String fieldName) {
-        return SENSITIVE_FIELDS.stream().anyMatch(field -> fieldName.toLowerCase().contains(field));
-    }
-
-    public void error(String format, Object... args) {
-        logger.debug(format, args);
     }
 }
